--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
 platformdirs==2.5.2
+pre-commit==2.19.0
 Pygments==2.12.0
 pylint==2.13.9
 rich==12.3.0
-textual==0.1.18
 textual-inputs==0.2.5
+textual==0.1.18
 tomli==2.0.1
+uuid==1.30
 wrapt==1.14.1
